// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 0 types 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
    }
  }
/>
`;

exports[`render 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
        },
        Object {
          "flex": 1,
        },
      ]
    }
    testID="assignment-details.submission-type.details-lbl"
  />
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
        },
        Object {
          "flex": 1,
        },
      ]
    }
    testID="assignment-details.submission-type.details-lbl"
  />
</View>
`;

exports[`render no data 1`] = `null`;

exports[`render single type 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
        },
        Object {
          "flex": 1,
        },
      ]
    }
    testID="assignment-details.submission-type.details-lbl"
  />
</View>
`;
